# GallineInFuga

./: .clang-format  .gitignore  CMakeLists.txt  README.md  boid.cpp  boid.hpp  boids.cpp  boids.hpp  constants.hpp  point.cpp  point.hpp  quadtree.cpp  quadtree.hpp  simulation.cpp  test.cpp
cazzatine varie/: cazzi-tuoi  cazzi-tuoi.cpp  texture  texture.cpp
include/: bird.hpp  boid.hpp  constants.hpp  flock.hpp  graphic.hpp  namespace.hpp  point.hpp  quadtree.hpp  sfml.hpp  statistics.hpp  triangle.hpp
src/: bird.cpp  boid.cpp  flock.cpp  graphic.cpp  main.cpp  point.cpp  quadtree.cpp  sfml.cpp  simulation.cpp  statistics.cpp  test.cpp  triangle.cpp
